Fix table alignment and background blur issue

--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -50,3 +50,12 @@ a {
 .full-height {
   height: 100%;
 }
+
+.MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded {
+  background-color: initial;
+}
+
+.table-alignment {
+  width: 80%;
+  margin: auto;
+}
